<resources>
    <string name="app_name">BatMan</string>
    <string name="movie_list_fragment_title">BatMan Collection</string>
    <string name="ratings">Ratings</string>
    <string name="imdb">IMDB:</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="production">Production</string>
    <string name="actors">Actors</string>
    <string name="box_office">Box Office:</string>
    <string name="plot">Plot</string>
</resources>