<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/movie_list_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/txtTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_weight="6"
                app:layout_constraintLeft_toRightOf="@id/imgPoster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_tiny"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toRightOf="@id/imgPoster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/ratings"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@id/txtDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtImdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_tiny"
                app:layout_constraintLeft_toLeftOf="@id/txtRatings"
                app:layout_constraintTop_toBottomOf="@id/txtRatings" />

            <RatingBar
                android:id="@+id/rateImdb"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:stepSize="0.01"
                android:theme="@style/RatingBar"
                app:layout_constraintLeft_toRightOf="@id/txtImdb"
                app:layout_constraintTop_toBottomOf="@id/txtRatings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRatingList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_tiny"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="@id/txtRatings"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtImdb" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtImdbVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_tiny"
                app:layout_constraintLeft_toLeftOf="@id/txtRatings"
                app:layout_constraintTop_toBottomOf="@id/txtRatingList" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/director"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgPoster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDirectorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDirector" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWriter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/writer"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDirectorValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWriterValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtWriter" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/production"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtWriterValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtProductionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtProduction" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/actors"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtProductionValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtActorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtActor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBoxOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/box_office"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtActorValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBoxOfficeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBoxOffice" />

            <View
                android:id="@+id/viewLiner"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/txtBoxOfficeValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/plot"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLiner" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ttxPlotValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPlot" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/prg_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />
</androidx.constraintlayout.widget.ConstraintLayout>